--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
    </section>
    <section>
       <div class="container offer">
-         <h1 id="down">I'm your best pick for:</h1>
+         <h1 id="down">I'm your best pick for</h1>
          <div class="grid">
             <div id="left" class="work">
                <div>Social Media Designs</div>
