Updated the CSS to improve mobile responsibility

--- a/index.html
+++ b/index.html
@@ -3,39 +3,38 @@
 
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="style.css">
    <title>Sam Designs</title>
 </head>
+
 <body id="home">
-   <header>
-      <nav>
-         <div class="navbar">
-            <div class="hamburger"> 
-               <div class="ham top"></div>
-               <div class="ham mid"></div>
-               <div class="ham bot"></div>
-            </div>
-            <p>Sam Designs</p>
-            <div class="alter">
-               <a href="#home" class="link">Home</a>
-               <a href="https://www.behance.net/samadoseni1" class="link">Portfolio</a>
-               <a href="#faq" class="link">FAQ</a>
-               <a href ="#contact" class="link">Contact</a>
-            </div>
+   <nav>
+      <div class="navbar">
+         <div class="hamburger">
+            <div class="ham top"></div>
+            <div class="ham mid"></div>
+            <div class="ham bot"></div>
          </div>
-         <div class="menu">
-            <button class="back">✖️</button>
-            <ul>
-               <li><a href="#home" class="link">Home</a></li>
-               <li><a href="https://www.behance.net/samadoseni1" class="link">Porfolio</a></li>
-               <li><a href="#faq" class="link">FAQ</a></li>
-               <li><a href ="#contact" class="link">Contact</a></li>
-            </ul>
+         <p>Sam Designs</p>
+         <div class="alter">
+            <a href="#home" class="link">Home</a>
+            <a href="https://www.behance.net/samadoseni1" class="link">Portfolio</a>
+            <a href="#faq" class="link">FAQ</a>
+            <a href="#contact" class="link">Contact</a>
          </div>
-      </nav>
-   </header>
+      </div>
+      <div class="menu">
+         <button class="back">✖️</button>
+         <ul>
+            <li><a href="#home" class="link">Home</a></li>
+            <li><a href="https://www.behance.net/samadoseni1" class="link">Porfolio</a></li>
+            <li><a href="#faq" class="link">FAQ</a></li>
+            <li><a href="#contact" class="link">Contact</a></li>
+         </ul>
+      </div>
+   </nav>
    <section>
       <div class="container hero">
          <div class="intro" id="left">
@@ -107,7 +106,7 @@
             </div>
             <div class="hid">
                It depends entirely on your budget and the complexity of your project.
-               But my starting rate is <b>10$ per hour</b>.
+               <a href="https://wa.me/09137156472/?text=Hi%20Sam.%20I%20would%20love%20to%20to%20work%20with%20you./">Let's talk about your project</a>
             </div>
             
             <div class="box-cells">
