Changed my logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                <div class="ham mid"></div>
                <div class="ham bot"></div>
             </div>
-            <p>Sam Designs</p>
+            <img src="./images/MY LOGO.png">
             <div class="alter">
                <a href="#home" class="link">Home</a>
                <a href="https://www.behance.net/samadoseni1" class="link">Portfolio</a>
